--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -56,6 +56,7 @@
         }
 
         function moveFigure(newPosition) {
+            console.log(newPosition);
             console.log('start move');
             imagePosition.x = newPosition.x;
             imagePosition.y = newPosition.y;
