--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -20,7 +20,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="https://unpkg.com/konva@8/konva.min.js"></script>
+    <script src="/js/konva.min.js"></script>
 
     <script>
         var anim;
